--- a/04/index.html
+++ b/04/index.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>체스</title>
+  <title>chess</title>
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
   
   <div class="wrap">
-    <div class="b"></div>
-    <div class="w"></div> 
-    <div class="b"></div>
-    <div class="w"></div> 
-    <div class="w"></div>
-    <div class="b"></div> 
-    <div class="w"></div>
-    <div class="b"></div> 
-    <div class="b"></div>
-    <div class="w"></div> 
-    <div class="b"></div>
-    <div class="w"></div> 
-    <div class="w"></div>
-    <div class="b"></div> 
-    <div class="w"></div>
-    <div class="b"></div>
+    <!-- <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div> 
+    <div class="black"></div>
+    <div class="white"></div> 
+    <div class="black"></div>
+    <div class="white"></div> 
+    <div class="black"></div>
+    <div class="white"></div> 
+    <div class="black"></div>
+    <div class="white"></div> 
+    <div class="black"></div>
+    <div class="white"></div> 
+    <div class="black"></div>
+    <div class="white"></div>   -->
   </div>
-  <script src="app.js"></script>
+  <script src="test.js"></script>
 </body>
 </html>
