--- a/04/index.html
+++ b/04/index.html
@@ -30,6 +30,6 @@
     <div class="black"></div>
     <div class="white"></div>   -->
   </div>
-  <script src="test.js"></script>
+  <script src="success.js"></script>
 </body>
 </html>
