--- a/07/jquery.html
+++ b/07/jquery.html
@@ -7,6 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <div> <h1>jQuery</h1></div><br>
+    <div> <h1>hhh</h1></div>
+
+<div class = 'a'>1</div>
+<div class = 'b'>2</div>
+<input type="text" id= 'txt'>
+<button id = 'btn'>검색</button>
+<div>3</div>
+<div>4</div>
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="jquery.js"></script>
 </body>
 </html>
