--- a/07/jquery.html
+++ b/07/jquery.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div> <h1>jQuery</h1></div><br>
+     <h1>jQuery</h1><br>
     <div> <h1>hhh</h1></div>
 
 <div class = 'a'>1</div>
