--- a/07/jquery.html
+++ b/07/jquery.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Page Title</title>
+    <style>
+            .wrap div {margin: 10px; background-color: green};
+            </style>
+
 </head>
 <body>
+   
      <h1>jQuery</h1><br>
     <div> <h1>hhh</h1></div>
-
+<div class = 'wrap'>
 <div class = 'a'>1</div>
 <div class = 'b'>2</div>
-<input type="text" id= 'txt'>
-<button id = 'btn'>검색</button>
 <div>3</div>
 <div>4</div>
+</div>
+
+<input type="text" id= 'txt'>
+<button id = 'btn'>검색</button>
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="jquery.js"></script>
 </body>
