--- a/07/top.html
+++ b/07/top.html
@@ -23,13 +23,14 @@
 <script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
 
 <script>
-  var $body = $(document.body); //자주 사용하기에 캐시되게 변수에 넣어준다
+  var $body = $('body'); //자주 사용하기에 캐시되게 변수에 넣어준다
   var $top = '';
 
-  $top = $('<div>') //div 를 만들고
+  $top = $('<div>') //div 를 만들고 <div class="top"
           .addClass('top') //top className을 주고
           .hide() //처음에는 숨겨둔다
           .click(function () {  // 클릭이 이벤트 할당
+            console.log('click');
             $body.animate({scrollTop: 0}); //animation효과로 scollTop=0으로 이동
           })
           .appendTo($body); // body에 top을 넣는다
@@ -47,10 +48,10 @@
     }
  
   });
-  function goTop(){
-  // $window.scrollTop(0); 
-  $( 'html, body' ).animate( { scrollTop : 0 }, 400 )
-}
+//   function goTop(){
+//   // $window.scrollTop(0); 
+//   $( 'html, body' ).animate( { scrollTop : 0 }, 400 )
+// }
 
 $top.click(goTop);
 
