--- a/06/api.html
+++ b/06/api.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>open api</h1>
+    <input type= "text" class = 'search' onKeyDown="onKeyDown();" >
+    <button class = 'btn'>검색</button>
+    <div id="wrap"></div><br>
+    
     <script src="app.js"></script>
 </body>
 </html>
