--- a/06/api.html
+++ b/06/api.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <h1>open api</h1>
-    <input type= "text" class = 'search' onKeyDown="onKeyDown();" >
-    <button class = 'btn'>검색</button>
+        <h1 class = "title">open api</h1>
+    <div class  = "search">
+        <input type= "text" class = 'search_bar' size = "100px" row = "50px" onKeyDown="onKeyDown();" >
+        <button class = 'btn'>검색</button></div>
+    
     <div id="wrap"></div><br>
     
     <script src="app.js"></script>
