--- a/test/index.html
+++ b/test/index.html
@@ -15,30 +15,22 @@
     <div>
         <ul class="nav nav-tabs">
             <!-- 선택된탭:선택된 탭에 .active    -->
-            <li class="active"><a href="#">트렌딩</a></li>
-            <li><a href="#">이슈</a></li>
-            <li><a href="#">엔터</a></li>
+            <li class="active" id = "trending">트렌딩</a></li>
+            <li id = "issue">이슈</a></li>
+            <li id = "enter">엔터</a></li>
         </ul>
     </div>
-
     <div id="list">
-
-        <!-- 여기서 각 리스트 뿌려주기 <br><br>
-
-        http://1boon.kakao.com/ch/trending.json <br>
-        http://1boon.kakao.com/ch/issue.json <br>
-        http://1boon.kakao.com/ch/enter.json <br> -->
-
-        <!-- 로딩마크업: 로딩중일때만 표시 -->
-        <!-- <div class="text-center">
+            
+    <div class = "loading">
+    <div class="text-center">
             <span class="glyphicon glyphicon-refresh"></span> 로딩중
-        </div> -->
+        </div>
     </div>
-
+    </div>
     <div class="text-center">
         <button type="button" class="btn btn-default">더보기</button>
     </div>
-</div>
 <script src="app.js"></script>
 </body>
 </html>
